<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5FFFDF4"
    android:paddingBottom="40dp"
    tools:context=".Activities.MainActivity">

    <ImageView
        android:id="@+id/user_avatar"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="45dp"
        android:src="@drawable/user_avatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
       />

    <TextView
        android:id="@+id/goodEvening"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:fontFamily="@font/rubik"
        android:text="@string/home_good_evening"
        android:textColor="@color/text_color"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/user_avatar"
        app:layout_constraintTop_toBottomOf="@+id/user_avatar" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:layout_marginHorizontal="23dp"
        android:layout_marginTop="10dp"
        android:overScrollMode="never"
        android:clipChildren="true"
        android:orientation="horizontal"
        android:paddingTop="5dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@+id/goodEvening"
        tools:listitem="@layout/item_calendar_day" />


<!--    <com.google.android.material.textfield.TextInputLayout-->
<!--        android:id="@+id/search"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="10dp"-->
<!--        android:layout_marginHorizontal="23dp"-->
<!--        android:layout_marginBottom="18dp"-->
<!--        app:boxStrokeWidth="0dp"-->
<!--        app:boxStrokeWidthFocused="0dp"-->
<!--        app:helperTextEnabled="false"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/recyclerView"-->
<!--        app:startIconDrawable="@drawable/ic_search"-->
<!--        app:startIconTint="#DFBD43"-->
<!--        tools:layout_editor_absoluteX="32dp">-->

<!--        <com.google.android.material.textfield.TextInputEditText-->
<!--            android:id="@+id/username"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="50dp"-->
<!--            android:background="@drawable/search_bakground"-->
<!--            android:fontFamily="@font/rubik"-->
<!--            android:inputType="text"-->
<!--            android:hint="@string/search"-->
<!--            android:textSize="16sp"-->
<!--            android:paddingStart="45dp"-->
<!--            />-->

<!--    </com.google.android.material.textfield.TextInputLayout>-->

    <androidx.appcompat.widget.SearchView
        android:id="@+id/search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/recyclerView"
        android:focusableInTouchMode="false"
        android:layout_marginHorizontal="23dp"
        android:background="@drawable/search_bakground"
        app:iconifiedByDefault="false"
        app:searchIcon="@drawable/ic_search"
        app:queryHint="@string/search"
       />

    <TextView
        android:id="@+id/todeyTasks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/rubik_semi_bold"
        android:text="@string/today_s_tasks"
        android:textColor="#444444"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/search" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/tasksView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="23dp"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:overScrollMode="never"
        android:paddingTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/todeyTasks"
        app:layout_constraintBottom_toTopOf="@id/imageView"
        tools:listitem="@layout/tasks_item"
        android:layout_marginBottom="-29dp"
         />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@drawable/shadow_backgroud"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tasksView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/navigation_bar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <ImageButton
        android:id="@+id/addTask"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:src="@drawable/add_task_button"
        android:background="#00FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView" />



</androidx.constraintlayout.widget.ConstraintLayout>